cmake_minimum_required(VERSION 3.24)
project(algorithmic)
set(CMAKE_CXX_STANDARD 20)
foreach(FILE_PATH ${DEMO_RESOURCE})
    add_executable(${FILE_NAME} ${FILE_PATH} src/DSFSDA.cpp UVa/enum_n.cpp CSP/201912_1.cpp UVa/10976_Frac_Again.cpp UVa/11059_Maximum_Product.cpp src/Bag.cpp src/permutatiom.cpp src/Union_Find_set.cpp src/Fast_pow.cpp educoder/3_20.cpp)
endforeach()
